# gpipe-and-friends

GPipe-Core/: stack.yaml
GPipe-Core/src/Graphics/GPipe/Internal/: ListT.hs  Shader.hs
GPipe-GLFW4/: GPipe-GLFW4.cabal  stack.yaml
